<resources>
    <string name="app_name">Molecus</string>

    <string name="navigation_drawer_open">Открыть панельку</string>
    <string name="navigation_drawer_close">Закрыть панельку</string>

    <string name="action_settings">Настройки</string>

    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="title_activity_login">Войти</string>
    <string name="title_activity_subscribers">Друзья</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="error_field_required">Заполните поле</string>

    <string name="project_cover">Обложка</string>

    <string name="scene">Сцена</string>
    <string name="all_projects">Все проекты</string>
    <string name="voting">Голосование</string>
    <string name="my_projects">Мои проекты</string>
    <string name="feed">Лента</string>
    <string name="subscribers">Друзья</string>
    <string name="dialogs">Диалоги</string>

    <string name="subscriber_online">В сети</string>
</resources>
