<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_projects"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scene"
            android:icon="@mipmap/ic_scene"
            android:title="@string/scene" />
        <item
            android:id="@+id/nav_all_projects"
            android:icon="@mipmap/ic_all_projects"
            android:title="@string/all_projects" />
        <item
            android:id="@+id/nav_my_projects"
            android:icon="@mipmap/ic_my_projects"
            android:title="@string/my_projects" />
    </group>

    <group
        android:id="@+id/group_personal"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_feed"
            android:icon="@mipmap/ic_feed"
            android:title="@string/feed" />
        <item
            android:id="@+id/nav_subscribers"
            android:icon="@mipmap/ic_subscribers"
            android:title="@string/subscribers" />
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@mipmap/ic_dialogs"
            android:title="@string/dialogs" />
    </group>
</menu>
